# nftables-operator

./: .gitignore  .jujuignore  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  charmcraft.yaml  pyproject.toml
.github/workflows/: check.yaml  promote.yaml  release.yaml
src/: __init__.py  charm.py  nftables.py
tests/: integration_in_vm.sh  integration_on_host.sh
tests/integration/: environment.py  test_charm.py
tests/unit/: test_charm.py
